--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -1,17 +1,18 @@
 html {height: 100%}
 body {background:url(/jivox/assets/img/login-back.jpg); background-size:cover; font:12px Verdana}
-#logo{margin-bottom:50px;margin-top: 30px;}
+#logo{margin-bottom:50px;margin-top: 30px;	padding-left: 10px;}
 .container{
-				margin-top: 150px;
+			    margin-top: 150px;
 			    text-align: center;
 			    width: 380px;
 			    height: 425px;
 			    padding-bottom: 30px;
 			    margin-left: auto;
 			    margin-right: auto;
-			    background-color: #d3d3e2;
+			    background-color: #ccccccf5;
 			    border-radius: 20px;
 			    opacity: 0.95;
+			    box-shadow: 0 0 1pc #ccc;
 		  }
 #username, #password, #login_btn {border:1px solid #ccc;padding:5px;text-align:center; width:300px;}
 #username{border-top-left-radius:3px;border-top-right-radius:3px;margin-bottom:-1px}
