--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,231 +1,13 @@
-body{margin:0;padding:0;font:11px Verdana;}
-body.noScroll{overflow: hidden;}
-
-img{ border:0;}
-a{text-decoration:none;color:#000;}
-
-h1{font:14px Arial;font-weight:bold}
-h4{margin-top:0px}
-h4 .n-title{font-weight:normal}
-
-.clear{clear:both}
-div.l{float:left}
-div.r{float:right;margin-right:30px;}
-
-form{margin:0;padding:0;}
-input[type=text],input[type=number],select{background:#fff;border:1px solid #ccc;padding:5px;border-radius:3px; box-shadow: inset 0 1px 1px rgba(0,0,0,.075);font:11px Verdana;width:90%}
-select{padding:4px;width:100%}
-input[disabled],input[readonly]{background:#eee;border:1px solid #ccc;cursor: not-allowed;}
-input[type=text].error,input[type=number].error{border:1px solid #c7254e;background-color:#f9f2f4}
-.inline-form input,.inline-form select {width:inherit}
-.inline-form {margin-bottom:20px;}
-
-/****************************
- * Generic Primary Button Style
- ****************************/
-.btn{background-color:#337ab7;border:1px solid #2e6da4;color:#fff; padding:4px 15px 4px 15px;border-radius:3px;cursor:pointer}
-button.btn, input.btn[disabled]{opacity:0.8;background-color:#337ab7;border:1px solid #2e6da4;}
-.btn:hover{background-color:#286090;border:1px solid #204d74;}
-
 
 /************************
- * Generic Template Styles
+ * Review Page
  ************************/
-#header{box-shadow:0px 2px 2px #999;height:50px;padding:5px;}
-#logo{height:50px;margin-right:80px;}
-#container{min-height:525px;border:1px solid transparent;position:relative}
-#footer{padding:10px;padding-bottom:24px;box-shadow:0px -4px 4px -3px #999;background-color:#fff}
-
-#header #menu {margin-top:14px;}
-#header #menu ul{list-style:none;margin:0;padding:0;}
-#header #menu li{display:inline-block;height:36px;font-size:14px;font-family:Arial;margin-right:20px; border-bottom:5px solid #FFF; transition:0.5s border-color ease}
-#header #menu li:hover{border-bottom:5px solid #D8E4FB;color:#000;}
-#header #menu li a {color:#666}
-#header #menu li.active{border-bottom:5px solid #3B7BEA;color:#000;font-weight:600}
-#header #menu li.active a {color:#000}
-
-#header #profile {padding:5px;text-align:right;margin-right:7px;}
-#header #profile .name{font-weight:bold;font-size:14px;margin-bottom:10px;}
-
-#header #switch-role a{display:inline-block;float:left;text-align:center;padding:17px;margin-top:-5px;background:#eee}
-#header #switch-role a.active{font-weight:bold;background:#ddd;padding-top:14px;border-bottom:#3B7BEA 3px solid}
-
-
-#top-menu{padding-left:10px;padding-top:0px;background-color:#eee;margin-top:2px;/*box-shadow: inset 0 -5px 10px -8px #000000;*/}
-#top-menu ul {margin:0;padding:0;}
-#top-menu ul li {display:inline-block;margin:0;margin-right:2px;cursor:pointer; padding:8px; padding-bottom:12px; transition:0.2s background-color;}
-#top-menu ul li:hover{background-color:#ccc;}
-#top-menu ul li.active {background-color:#fff;font-weight:bold;padding:8px;padding-bottom:12px;margin-right:3px;margin-left:2px;}
-
-.pages {padding:20px;padding-bottom:10px;}
-.section {padding-left:20px;padding-right:20px;padding-bottom:20px;}
-.hidden{display:none}
-.visible_none{visibility:hidden;}
-.errorpage{text-align:center;padding:20px;border:1px solid #ebccd1;margin:30px;border-radius:5px;background-color:#f2dede;color:#a94442;}
-
-.excel{display:inline-block;background:url(../img/xls.png);width:25px;height:25px;vertical-align:middle}
-
-.icon-view{color:#ccc;float:right}
-
-/**************************
- * Specific Template Styles
- **************************/
- 
-/* Used on the Delivery Admin Page */ 
-#account_panel {float:left;width:15%;background:#F8F8F8;margin-top:2px;margin-bottom:-30px;height:500px;overflow-y:auto;box-sizing:border-box;font:13px Arial;}
-#account_panel ul {list-style:none;margin:0;padding:0;}
-#account_panel ul li {padding-top:10px;padding-bottom:10px;padding-left:10px;cursor:pointer;transition:0.2s all}
-#account_panel ul li.active{border-left:5px solid #3B7BEA !important;font-weight:bold;background:#eee}
-#account_panel ul li:hover{border-left:5px solid #D8E4FB}
-#account_panel .side_title{padding:9px;border-bottom:1px solid #ccc;font-weight:bold;}
-.rate_delete {font-size:14px;}
-
-#site-error{position:absolute;bottom:0px;left:0px;right:0px;height:300px;background:#fff;box-shadow:2px -2px 2px #888;}
-#site-error-title{background:red;color:#fff;padding:10px;font-weight:bold;font-size:13px;}
-#site-error-body{padding:10px;overflow-y:auto;height:240px;}
-
-/**************************
- * Used for the X-editables. This overrides the base styles
- ***************************/
-.ed_input,.tab .ed_open,.tab .tab_action{cursor:pointer;color:#CC6600}
-input.ed_input_box:focus {outline:none}
-input.ed_input_box{border:0px solid;background-color:inherit;padding:0px;box-shadow:inherit}
-.c {text-align:center}
-.r {text-align:right}
-.ed_input_box:hover{background:#FFFFCC}
-select.ed_input_box:hover{background:#FFFFFF}
-.ed_form{cursor:pointer;color:#CC6600}
-.ed_icon{cursor:pointer;}
-
-/****************************
- * For standard colored tables, generally used on the admin and on the pipeline tables
- **************************/
-.table{border-collapse:collapse;}
-.table th{text-align:left;padding:5px;font-size:11px;vertical-align:middle;background:#ccc}
-.table th .hg{font-weight:normal;color:#666;font-size:11px}
-.table td{text-align:left;border-bottom:1px solid #eee;padding:5px;}
-.table td.c{text-align:center}
-.table td.r{text-align:right}
-.table tbody tr:hover {background-color:#FFFFCC}
-.table .ed_input{padding:5px;margin:-5px;display:block}
-.table .ed_input_box{width:100%}
-.table .pipeline_hidden{color:#ccc}
-.table .icon-trash{font-size:14px;cursor:pointer}
-.table .icon-trash:hover{color:#b30000;}
-.table .icon-plus{font-size:12px;cursor:pointer}
-.table .icon-plus:hover{color:green;}
-
-/*****************************
- * For the revenue tables or any other colored tables with the drill down and col expand functions
- *****************************/
-.tab{width:100%;margin-bottom:15px;visibility:hidden;}
-.tab.disp{visibility:visible}
-.tab {border-collapse:collapse;}
-.tab th,.tab td{border: 1px solid #ccc;border-top: 0px;}
-.tab th{background:#ccc;margin:0;padding:5px;}
-.tab td{text-align:right;padding:5px;max-width:150px;overflow:hidden;white-space:nowrap;text-overflow:ellipsis}
-.tab tr:hover{background:#FFFFCC !important}
-.tab tr:hover td{background:#FFFFCC !important}
-.tab tr:hover .imp{background:#FFFFCC url(../images/starp.png) no-repeat !important}
-.tab .n{font-weight:normal}
-.tab .l{text-align:left}
-.tab .c{text-align:center}
-.tab .pnum{font-size:9px;color:#8c8c8c}
-.tab .l30{text-align:left;padding-left:30px}
-.tab .l50{text-align:left;padding-left:50px}
-.tab .yt {background:#C1D4E6; min-width:50px}
-.tab .y {background:#D6EBFF}
-.tab .q1t{background:#E6CFB8; min-width:50px}
-.tab .q1{background:#FFE6CC}
-.tab .q2t{background:#C5E685; min-width:50px}
-.tab .q2{background:#DBFF94}
-.tab .q3t{background:#CFDAE6; min-width:50px}
-.tab .q3{background:#E6F2FF}
-.tab .q4t{background:#E6CAE6; min-width:50px}
-.tab .q4{background:#FFE0FF}
-.tab small{color:blue}
-.tab th.n {font-weight:normal}
-.tab .col_expander{cursor:pointer}
-.tab .tot_line{background:#ccc;font-weight:bold}
-.tab tr:hover  .ed_input input[type=text]{background:#FFFFCC}
-.tab tr,.tab td {transition:0.2s background-color}
-.tab .clickrow,.tab .popup{cursor:pointer}
-.tab .p_num{font-size:10px;color:#b3b3b3}
-.tab .acc_disabled, .tab .pclosed{color:#ccc}
-.tab .icon-up{color:green;float:left}
-.tab .icon-down{color:red;float:left}
-.tab .icon-same{color:#ccc;float:left}
-
-.peopletab.tab .q1t,.peopletab.tab  .q2t, .peopletab.tab .q3t,.peopletab.tab .q4t{width:inherit}
-.peopletab.tab .yt{width:100px;}
-
-/* Arrows - Used for the .tab table */
-.arrow,.collapsed .arrow { width: 0; height: 0; border-bottom: 5px solid transparent; border-top: 5px solid transparent; border-left: 5px solid #ccc; font-size: 0; line-height: 0; vertical-align:middle;margin-right:4px; }
-.expanded .arrow  { width: 0; height: 0; border-left: 5px solid transparent; border-right: 5px solid transparent; border-top: 5px solid #ccc; font-size: 0; line-height: 0; vertical-align:middle;margin-right:4px; }
-
-/*************************
- * Used on the bottom forms for data entry where the forms are not integrated into the tables
- *************************/
-.bottom-form {margin-top:20px;border:1px solid #ddd;padding:8px;padding-bottom:10px;border-radius:3px;background-color:#eee}
-.bottom-form table{width:100%}
-.bottom-form table th{text-align:left}
-
-/*************************
- * Context menu on the pipeline table
- *************************/
-#contextmenu	{ border:1px solid #999; padding:0; background:#fff; width:180px; list-style-type:none; display:none;box-shadow:1px 1px 2px #ccc; }
-#contextmenu .separator	{ border-top:1px solid #999; }
-#contextmenu li	{ margin:0; padding:0; }
-#contextmenu li.hidden { display:none;}
-#contextmenu li a { display:block; padding:5px 10px 5px 15px; width:155px; font-size:12px; text-decoration:none; font-family:tahoma,arial,sans-serif; color:#000; background-position:8px 8px; background-repeat:no-repeat; }
-#contextmenu li a:hover	{ background-color:#ddd; }
-#contextmenu li a.disabled { color:#ccc;}
-#contextmenu li a.disabled:hover { background-color:#fff; }
-
-/***********************
- * Popup on the people section
- ************************/
-#popup{position:absolute;top:10px;left:10px;display:block}
-#popup .pop_arrow{margin:auto;width: 0; height: 0; border-left: 10px solid transparent; border-right: 10px solid transparent; border-bottom: 10px solid #ccc;	font-size: 0; line-height: 0;}
-#popup .pop_arrow_s{margin:auto;margin-top:-9px;width: 0; height: 0; border-left: 10px solid transparent; border-right: 10px solid transparent; border-bottom: 10px solid #fff;	font-size: 0; line-height: 0;}
-#popup .pop_data{margin-top:-2px;background:#fff;box-shadow:0px 2px 5px #ccc;padding:5px;border-radius:5px;}
-
-/************************
- * Delivery Form Entry
- ************************/
-#delivery-form-overlay{position:absolute;width:700px;height:650px;top:0;left:9999px;background:#fff;box-shadow:-2px 0px 2px #888;z-index:10;display:none;}
-#delivery-form-overlay #df-title{float:left;margin:10px;margin-top:8px;font-weight:bold}
-#delivery-form-overlay #df-close{float:right;font-size:18px;cursor:pointer;border-radius:2px;margin:2px;padding:1px;color:#333;transition:0.2s all ease}
-#delivery-form-overlay #df-close:hover{float:right;font-size:18px;cursor:pointer;box-shadow:0px 1px 2px #333;color:#e60000}
-#delivery-form-overlay #delivery-form-load{height:100%}
-#delivery-form-overlay #df_body{margin:10px;margin-top:0;margin-right:0;height:92%}
-#delivery-form-overlay #delivery-form{height:100%}
-#delivery-form-overlay #delivery-form #df_revenue {font-weight:bold;font-size:14px;}
-#delivery-form-overlay .scroll-section{padding-right:5px;margin-bottom:10px;max-height:90%;overflow:auto}
-#delivery-form-overlay .icon-warning{color:orange;font-size:15px}
-#delivery-form-overlay #delivery-form tr.disabled{color:#aaa}
-#delivery-form-overlay #fill-sel.active{background-color:green;}
-#delivery-form-overlay #del-form-actions .btn{font-size:12px;}
-
-/************************
- * Reports
- ************************/
- .report_card{float:left;min-width:250px;margin-right:15px;margin-bottom:15px;border:1px solid #ccc;padding:10px;height:110px;border-radius:5px;}
- 
- /************************
- * Comments
- ************************/
-.error-form {margin-top:20px;border:1px solid #ddd;padding:8px;padding-bottom:30px;border-radius:3px;background-color:#eee}
-#show-img {color:#7192CA;cursor: pointer;}
-
-/*******************************
- * Pipeline Comment Form Entry
- ******************************/
-#pipeline-comments-overlay{position:absolute;width:700px;height:650px;top:0;left:9999px;background:#fff;box-shadow:-2px 0px 2px #888;z-index:10;display:none;}
-#pipeline-comments-overlay #c-title{float:left;margin:10px;margin-top:8px;font-weight:bold}
-#pipeline-comments-overlay #c-close{float:right;font-size:18px;cursor:pointer;border-radius:2px;margin:2px;padding:1px;color:#333;transition:0.2s all ease}
-#pipeline-comments-overlay #c-close:hover{float:right;font-size:18px;cursor:pointer;box-shadow:0px 1px 2px #333;color:#e60000}
-#pipeline-comments-overlay #pipeline-comments-load{height:100%}
-#pipeline-comments-overlay #c_body{margin:10px;margin-top:0;margin-right:0;height:90%}
-#pipeline-comments-overlay .scroll-section{padding-right:5px;margin-bottom:10px;max-height:90%;overflow:auto}
-#pipeline-comments-overlay #pipeline-comments{height:95%}
+#review-page-overlay{position:absolute;width:700px;height:650px;top:0;left:9999px;background:#fff;box-shadow:-2px 0px 2px #888;z-index:10;display:none;}
+#review-page-overlay #rev-close{float:right;font-size:18px;cursor:pointer;border-radius:2px;margin:2px;padding:1px;color:#333;transition:0.2s all ease}
+#review-page-overlay #rev-close:hover{float:right;font-size:18px;cursor:pointer;box-shadow:0px 1px 2px #333;color:#e60000}
+#review-page-overlay #review-page-load{height:100%}
+#review-page-overlay #rev_body{margin:10px;margin-top:0;margin-right:0;height:92%}
+#review-page-overlay #review-form{height:100%}
+#review-page-overlay .scroll-section{padding-right:5px;margin-top:10px;margin-bottom:10px;max-height:80%;overflow:auto}
+#review-page-overlay .icon-warning{color:orange;font-size:15px}
+#review-page-overlay .type{font-weight: bold;}
